tests/fixtures/errors/invalid_theme_remote_source.puml
@startuml
!theme plain from https://example.com/themes
A -> B
@enduml
